--- a/Felony.cabal
+++ b/Felony.cabal
@@ -1,16 +1,15 @@
 name:                felony
 version:             0.0.1
 synopsis:            A Lisp written in Haskell. Scheme is to Felony as a scheme is a felony.
-homepage:            https://github.com/fhsjaagshs/hisk
+homepage:            https://github.com/fhsjaagshs/felony
 license:             MIT
-author:              Nathaniel
+author:              Nathaniel Symer
 maintainer:          nate@symer.io
 category:            Languages 
 build-type:          Simple
 cabal-version:       >=1.8
-data-dir:            assets
 
-executable blog
+executable felony
   main-is:           Felony.hs
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -O
