Resolved a number of issues

--- a/Felony.cabal
+++ b/Felony.cabal
@@ -14,6 +14,8 @@ executable felony
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -O
   build-depends:     base,
-                     parsec
+                     parsec,
+                     containers,
+                     transformers
 
   
