--- a/Felony.cabal
+++ b/Felony.cabal
@@ -10,7 +10,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 
 executable felony
-  main-is:           Felony.hs
+  main-is:           Main.hs
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -O
   build-depends:     base,
