--- a/Felony.cabal
+++ b/Felony.cabal
@@ -22,6 +22,7 @@ executable felony
                      transformers,
                      mtl,
                      vector,
-                     stm
+                     stm,
+                     bytestring
 
   
