--- a/Felony.cabal
+++ b/Felony.cabal
@@ -13,16 +13,9 @@ data-dir:            lib
 executable felony
   main-is:           Main.hs
   hs-source-dirs:    src
-  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-orphans -fno-warn-unused-do-bind -O
+  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
   build-depends:     base,
-                     data-default,
                      parsec,
-                     containers,
                      unordered-containers,
                      transformers,
-                     mtl,
-                     vector,
-                     stm,
                      bytestring
-
-  
