--- a/Felony.cabal
+++ b/Felony.cabal
@@ -15,7 +15,8 @@ executable felony
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
   build-depends:     base,
-                     parsec,
-                     unordered-containers,
+                     bytestring,
                      transformers,
-                     bytestring
+                     mtl,
+                     unordered-containers,
+                     parsec
