--- a/Felony.cabal
+++ b/Felony.cabal
@@ -19,4 +19,5 @@ executable felony
                      transformers,
                      mtl,
                      unordered-containers,
-                     parsec
+                     parsec,
+                     optparse-applicative
