--- a/Felony.cabal
+++ b/Felony.cabal
@@ -15,9 +15,12 @@ executable felony
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
   build-depends:     base,
+                     integer-gmp,
+                     ghc-prim,
                      bytestring,
                      transformers,
                      mtl,
                      unordered-containers,
                      parsec,
                      optparse-applicative
+                     
