--- a/silence.cabal
+++ b/silence.cabal
@@ -1,6 +1,6 @@
-name:                felony
+name:                silence
 version:             0.0.1
-synopsis:            A Lisp written in Haskell. Scheme is to Felony as a scheme is a felony.
+synopsis:            Lisp dialect designed to be both simple and structured.
 homepage:            https://github.com/fhsjaagshs/felony
 license:             MIT
 author:              Nathaniel Symer
@@ -10,7 +10,7 @@ build-type:          Simple
 cabal-version:       >=1.8
 data-dir:            lib
 
-executable felony
+executable silence
   main-is:           Main.hs
   hs-source-dirs:    src
   ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
@@ -23,4 +23,3 @@ executable felony
                      unordered-containers,
                      parsec,
                      optparse-applicative
-                     
