New FFI that supports proper alignments

--- a/ffi_example/makefile
+++ b/ffi_example/makefile
@@ -1,10 +1,13 @@
 all: exampledylib
 
-exampledylib: example.o
-	gcc -dynamiclib -current_version 1.0 example.o -o example.dylib
+exampledylib: expression.o example.o
+	gcc -dynamiclib -current_version 1.0 expression.o example.o -o example.dylib
 
 example.o: example.c
 	gcc -c -fpic example.c
+
+expression.o: ../cbits/Expression.c
+	gcc -c -fpic ../cbits/Expression.c
 
 clean:
 	rm *o example.dylib
