--- a/silence.cabal
+++ b/silence.cabal
@@ -13,7 +13,7 @@ data-dir:            lib
 executable silence
   main-is:           Main.hs
   hs-source-dirs:    src
-  ghc-options:       -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
+  ghc-options:       -dynamic -threaded -Wall -fwarn-tabs -fno-warn-unused-do-bind -O
   other-modules:     Silence.FFI
   build-depends:     base,
                      integer-gmp,
